Refactoring of recordbase -> origin
Massive changes in code/unittest/api/documentation
