# src/main/openapi/ds-storage-openapi_v1.yaml
@@ -16,46 +16,46 @@ servers:
 
 paths:
   
-  /bases/config:
+  /origin/config:
     get:
       tags:
         - '${project.name}'
-      summary: 'Retrieve list of configured record bases with update strategy'
-      operationId: getBasesConfiguration
+      summary: 'Retrieve list of configured origin with update strategy'
+      operationId: getOriginConfiguration
       responses:
         '200':
-          description: 'A list of configured record bases with update strategy'
+          description: 'A list of configured origin with update strategy'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecordBaseList'
+                $ref: '#/components/schemas/OriginList'
 
 
-  /bases/stats:
+  /origin/stats:
     get:
       tags:
         - '${project.name}'
-      summary: 'Show how many records in each recordbase'
-      operationId: getRecordBaseStatistics    
+      summary: 'Show how many records in each origin'
+      operationId: getOriginStatistics    
       responses:
         '200':
-          description: 'Show how many records exists for each record base'
+          description: 'Show how many records exists for each origin'
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RecordBaseCountList'
+                $ref: '#/components/schemas/OriginCountList'
 
 
-  /bases/cleanup:
+  /origin/cleanup:
     delete:
       tags:
         - '${project.name}'
-      summary: 'Delete all records for a recordbase that has deleted flag set. Notice that applications retrieving records from that recordbase will never know the record was deleted unless they retrieved it when it was marked with the delete flag.'
+      summary: 'Delete all records for an origin that has deleted flag set. Notice that applications retrieving records from that origin will never know the record was deleted unless they retrieved it when it was marked with the delete flag.'
       operationId: deleteMarkedForDelete
       parameters:
-        - name: recordBase
+        - name: origin
           in: query
-          description: 'recordBase'
+          description: 'origin'
           required: true
           schema:
             type: string
@@ -126,7 +126,7 @@ paths:
             example:           
               # Properties of a referenced object
               id: doms_radio_id1
-              base: doms_radio
+              origin: doms_radio
               data: '<xml> bla bla </xml>'
               parentId:
       responses:
@@ -138,13 +138,13 @@ paths:
     get:
       tags:
         - '${project.name}'
-      summary: 'Extract records from a record base after a given mTime and up to a defined maximum. The records are returned in sorted order by mTime increasing. Records marked for delete will also be returned.'
+      summary: 'Extract records from an origin after a given mTime and up to a defined maximum. The records are returned in sorted order by mTime increasing. Records marked for delete will also be returned.'
       operationId: getRecordsModifiedAfter  
       x-streamingOutput: true
       parameters:
-        - name: recordBase
+        - name: origin
           in: query
-          description: 'RecordBase . Will only extract records from this recordbase'
+          description: 'Origin . Will only extract records from this origin'
           required: true
           schema:
             type: string
@@ -233,14 +233,14 @@ paths:
 components:
   schemas:
 
-    RecordBase:
+    Origin:
       type: object
       properties:
         name:
           type: string
-          description: 'Name of the recordbase. IDs are prefixed with recordbase'
+          description: 'Name of the origin. IDs are prefixed with origin'
         updateStrategy:  
-          description: 'Update strategy defined for each recordbase. See the update strategy types with decription'
+          description: 'Update strategy defined for each origin. See the update strategy types with decription'
           schema:
           $ref: '#/components/schemas/UpdateStrategy'        
 
@@ -251,35 +251,35 @@ components:
       items: 
         $ref: '#/components/schemas/DsRecord'
    
-    RecordBaseList:
+    OriginList:
       type: array
       items: 
-        $ref: '#/components/schemas/RecordBase'
+        $ref: '#/components/schemas/Origin'
 
-    RecordBaseCountList:
+    OriginCountList:
       type: array
       items: 
-        $ref: '#/components/schemas/RecordBaseCount'
+        $ref: '#/components/schemas/OriginCount'
 
 
-    RecordBaseCount:
+    OriginCount:
       type: object
       properties:
-        recordBase:
+        origin:
           type: string
-          description: 'Name of the recordbase'
+          description: 'Name of the origin'
         count:
           type: integer
           format: int64
-          description: 'Number of records for each record base. This will also include records marked with delete flag'
+          description: 'Number of records for each origin. This will also include records marked with delete flag'
         deleted:
           type: integer
           format: int64
-          description: 'The number of records marked with deleted flag for that recordbase'
+          description: 'The number of records marked with deleted flag for that origin'
         latestMTime:
           type: integer
           format: int64
-          description: 'mTime stamp of most recent record updated or created for that recordbase'
+          description: 'mTime stamp of most recent record updated or created for that origin'
         lastMTimeHuman:
           type: string
           description: 'latestMTime in human readable format.  Date format is YYYY-MM-DD HH:mm:ssZ'
@@ -292,14 +292,14 @@ components:
       properties:
         id:
           type: string
-          description: 'Unique identifier for the record. Id must start with the recordbase followed by : See module description for more about ID naming convention'
+          description: 'Unique identifier for the record. Id must start with the origin followed by : See module description for more about ID naming convention'
         orgid:
           type: string
           description: 'Will contain the original ID if the ID format was not valid (invalid characters) and has been changed. '
         id_error:
           type: boolean
           description: 'Indicate if the orgininal ID format was invalid'
-        base:
+        origin:
           type: string
           description: 'Collection name where the record comes from. Lower characters and dot(.) allowed only.'
         deleted:
@@ -315,7 +315,7 @@ components:
         mTime:
           type: integer
           format: int64
-          description: 'Modification time for last create or update of the record. Format is millis with 3 added digits. When a record is updated, mTime for parent and child records can also be updated due to updatestrategy defined for that recordbase.'
+          description: 'Modification time for last create or update of the record. Format is millis with 3 added digits. When a record is updated, mTime for parent and child records can also be updated due to updatestrategy defined for that origin.'
         cTimeHuman:
           type: string
           description: 'Creation time in date format YYYY-MM-DD HH:mm:ssZ'
